# hyperi-rustlib

./: .dockerignore  .gitignore  .gitleaks.toml  .gitmodules  .hyperi-ci.yaml  .hypersec-ci.yaml  .markdownlint-cli2.yaml  .markdownlintignore  .mcp.json  .releaserc.json  .releaserc.yaml  AI-TRAINING-POLICY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SCOPE.md  SECURITY.md  STATE.md  TODO.md  VERSION  WBS.md  build.rs  clippy.toml  deny.toml  renovate.json  robots.txt  rustfmt.toml  typos.toml
.cargo/: audit.toml  config.toml
.claude/: .ai-version  settings.json
.claude/commands/: load.md  review.md  save.md  simplify.md  standards.md
.claude/rules/: UNIVERSAL.md  ai-conduct.md  chars-policy.md  clickhouse-sql.md  code-header.md  code-style.md  config-and-logging.md  design-principles.md  dfe-metrics.md  error-handling.md  git.md  issue-management.md  licensing.md  mocks-policy.md  pki.md  repo-naming.md  security.md  testing.md
.claude/skills/ai-common/: SKILL.md
.claude/skills/ai-guidelines/: SKILL.md
.claude/skills/documentation/: SKILL.md
.claude/skills/rust/: SKILL.md
.claude/skills/standards/: SKILL.md
.github/workflows/: ci.yml  publish.yml  release.yml  semantic-release.yml
benches/: concurrency_patterns.rs  config_benchmark.rs  engine_benchmark.rs  filter_benchmark.rs  logger_benchmark.rs  strmatch.rs
docs/: ARCHITECTURE.md  AUTO-WIRING.md  BACKPRESSURE.md  CACHE.md  CLICKHOUSE.md  CLICKHOUSE_PYTHON_BINDINGS.md  CONFIG-CASCADE.md  CORE-PILLARS.md  DEPLOYMENT-CONTRACT.md  DEPLOYMENT.md  DESIGN.md  FEATURE-FLAGS.md  GAP_ANALYSIS.md  INTEGRATION.md  KAFKA-PATH.md  MIGRATIONS.md  PKI.md  README.md  SELF-REGULATION.md  TRANSPORT-FILTER-FOLLOWUP.md  TRANSPORT.md  dependency-duplication.md
docs/api/: CACHE.md  CONCURRENCY.md  DIRECTORY-CONFIG.md  HTTP-CLIENT.md  HTTP-SERVER.md  SECRETS.md
docs/core-pillars/: CONFIG.md  HEALTH.md  LOGGING.md  METRICS.md  SHUTDOWN.md  TRACING.md
docs/deployment/: ARTEFACTS.md  CONTRACT.md  KEDA.md  NATIVE-DEPS.md
docs/pipeline/: BATCH-ENGINE.md  DLQ.md  SCALING.md  SPOOL.md  STRMATCH.md  TIERED-SINK.md  WORKER-POOL.md
docs/runtime/: MEMORY.md  RUNTIME-CONTEXT.md  SERVICE-RUNTIME.md
docs/transport/: BACKENDS.md  FILTER-ENGINE.md  OVERVIEW.md  ROUTING.md
examples/: cpu_loadgen.rs  full_demo.rs  mem_loadgen.rs  quickstart.rs
proto/vector/: event.proto  vector.proto
scripts/: dep-dup-check.sh  fetch-vector.sh  operational-cpu-test.sh  operational-mem-test.sh  set-version.py
scripts/operational/: Dockerfile.cpu_loadgen  Dockerfile.mem_loadgen
src/: credential.rs  env.rs  kafka_config.rs  lib.rs  parse_guard.rs  runtime.rs  sensitive.rs  shutdown.rs  tls.rs
src/cache/: config.rs  mod.rs
src/cli/: app.rs  args.rs  commands.rs  error.rs  mod.rs  output.rs  runtime.rs  version.rs
src/clickhouse/: client.rs  config.rs  error.rs  mod.rs  types.rs
src/clickhouse_arrow/: client.rs  config.rs  error.rs  mod.rs  types.rs
src/concurrency/: actor.rs  error.rs  mod.rs  periodic.rs  sink.rs
src/config/: env_compat.rs  flat_env.rs  mod.rs  postgres.rs  registry.rs  reloader.rs  sensitive.rs  shared.rs
src/database/: mod.rs
src/deployment/: app_project.rs  contract.rs  contract_identity.rs  error.rs  generate.rs  keda.rs  mod.rs  native_deps.rs  registry.rs  smoke.rs  test_support.rs  validate.rs  waves.rs
src/deployment/generate/: argocd.rs  common.rs  compose.rs  dockerfile.rs  helm.rs  manifest.rs  mod.rs
src/directory_config/: error.rs  git.rs  mod.rs  refresh.rs  store.rs  types.rs
src/dlq/: backend.rs  config.rs  entry.rs  error.rs  file.rs  http.rs  kafka.rs  mod.rs  orchestrator.rs  redis_dlq.rs
src/expression/: error.rs  evaluator.rs  mod.rs  profile.rs
src/governor/: budget.rs  config.rs  gate.rs  mod.rs  runtime.rs  source.rs
src/health/: mod.rs  registry.rs
src/http_client/: config.rs  mod.rs
src/http_server/: config.rs  error.rs  mod.rs  server.rs
src/io/: config.rs  mod.rs  ndjson_writer.rs
src/license/: crypto.rs  defaults.rs  error.rs  integrity.rs  mod.rs  types.rs
src/logger/: format.rs  helpers.rs  masking.rs  mod.rs  security.rs
src/memory/: cgroup.rs  guard.rs  mod.rs
src/metrics/: container.rs  dfe.rs  labels.rs  manifest.rs  mod.rs  otel.rs  otel_types.rs  process.rs
src/otel_tracing/: mod.rs
src/output/: config.rs  error.rs  file.rs  mod.rs
src/scaling/: config.rs  engine.rs  mod.rs  pressure.rs  rate_window.rs  transport_pressure.rs
src/secrets/: aws.rs  cache.rs  crypto.rs  error.rs  mod.rs  provider.rs  types.rs  vault.rs
src/spool/: config.rs  error.rs  mod.rs  queue.rs
src/strmatch/: classify.rs  mod.rs  plan.rs  tests.rs
src/tiered_sink/: circuit.rs  codec.rs  config.rs  drainer.rs  error.rs  mod.rs  sink.rs  tiered.rs
src/top/: config.rs  dashboard.rs  metrics.rs  mod.rs  oneshot.rs
src/transport/: codec.rs  detect.rs  error.rs  factory.rs  file.rs  http.rs  mod.rs  payload.rs  pipe.rs  propagation.rs  redis_transport.rs  routed.rs  traits.rs  types.rs  work_batch.rs
src/version_check/: mod.rs
src/worker/: accumulator.rs  batch.rs  config.rs  metrics.rs  mod.rs  ndjson.rs  pool.rs  scaler.rs  stats.rs
src/worker/engine/: mod.rs  (+8 more)
tests/: config_cascade_honoured.rs  directory_config_tests.rs  e2e_tests.rs  engine_adversarial.rs  engine_integration.rs  env_integration.rs  expression_tests.rs  from_cascade_deser_error.rs  grpc_transport_integration.rs  integration_tests.rs  kafka_integration.rs  logger_output.rs  metrics_integration.rs  operational_cpu.rs  operational_memory.rs  parity_tests.rs  run_app_populates_config.rs  scaling_pressure_property.rs  smoke.rs  sync_in_async.rs  transport_filter.rs  vector_compat_integration.rs  worker_test.rs
tests/common/: mod.rs
tests/e2e/: contract_artefacts.rs  grpc_transport.rs  kafka.rs  mod.rs  vector_compat.rs
tests/fixtures/: cel_classifier_parity.json  log_line.txt.fixture
tests/integration/: config_parity.rs  directory_config.rs  env.rs  env_parity.rs  expression.rs  logger_output.rs  metrics.rs  mod.rs
tests/parity/: config_parity.rs  env_parity.rs  mod.rs
(+39 files in other folders)
